// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authors Content API Can request author by id including post count 1: [body] 1`] = `
Object {
  "authors": Array [
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "count": Object {
        "posts": Any<Number>,
      },
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
  ],
}
`;

exports[`Authors Content API Can request author by id including post count 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "436",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authors Content API Can request authors 1: [body] 1`] = `
Object {
  "authors": Array [
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
}
`;

exports[`Authors Content API Can request authors 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "1406",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authors Content API Can request authors including post count 1: [body] 1`] = `
Object {
  "authors": Array [
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "count": Object {
        "posts": Any<Number>,
      },
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "count": Object {
        "posts": Any<Number>,
      },
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "count": Object {
        "posts": Any<Number>,
      },
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
}
`;

exports[`Authors Content API Can request authors including post count 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "1466",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authors Content API Can request single author 1: [body] 1`] = `
Object {
  "authors": Array [
    Object {
      "bio": Any<String>,
      "bluesky": Nullable<Any<String>>,
      "cover_image": Nullable<Any<String>>,
      "facebook": Nullable<Any<String>>,
      "id": Any<String>,
      "instagram": Nullable<Any<String>>,
      "linkedin": Nullable<Any<String>>,
      "location": Any<String>,
      "mastodon": Nullable<Any<String>>,
      "meta_description": Nullable<Any<String>>,
      "meta_title": Nullable<Any<String>>,
      "name": Any<String>,
      "profile_image": Nullable<Any<String>>,
      "slug": Any<String>,
      "threads": Nullable<Any<String>>,
      "tiktok": Nullable<Any<String>>,
      "twitter": Nullable<Any<String>>,
      "url": Any<String>,
      "website": Nullable<Any<String>>,
      "youtube": Nullable<Any<String>>,
    },
  ],
}
`;

exports[`Authors Content API Can request single author 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "520",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
